--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Ace IPTV</string>
     <string name="connect_text">Connect</string>
+    <string name="internet_not_available">Please verify your internet connection</string>
     <string name="username_text">Username</string>
     <string name="password_text">Password</string>
+    <string name="wrong_credentials">Your credentials are not valid</string>
 </resources>
