--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Ace IPTV</string>
+    <string name="authentication_not_possible">Can\'t authenticate</string>
     <string name="connect_text">Connect</string>
     <string name="internet_not_available">Please verify your internet connection</string>
     <string name="username_text">Username</string>
