--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="internet_not_available">Please verify your internet connection</string>
     <string name="username_text">Username</string>
     <string name="password_text">Password</string>
+    <string name="tv_input_label">A.C.E. IPTV</string>
     <string name="wrong_credentials">Your credentials are not valid</string>
 </resources>
