--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Ace IPTV</string>
     <string name="authentication_not_possible">Can\'t authenticate</string>
     <string name="connect_text">Connect</string>
+    <string name="connection_successful_text">Connection successful!</string>
     <string name="internet_not_available">Please verify your internet connection</string>
     <string name="username_text">Username</string>
     <string name="password_text">Password</string>
