AceInputTvService: Display a toast if a channel couldn't be read
This case is more precisely seen if the M3U defining the channel
couldn't be read. In that case, notify the user that it will not be
possible to see it.

At the same time, change the context used for restarting the play
if a BehindLiveWindowException occurs.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="authentication_not_possible">Can\'t authenticate</string>
     <string name="connect_text">Connect</string>
     <string name="connection_successful_text">Connection successful!</string>
+    <string name="invalid_channel">Channel invalid, please contact A.C.E</string>
     <string name="internet_not_available">Please verify your internet connection</string>
     <string name="username_text">Username</string>
     <string name="password_text">Password</string>
