Implement basic MainActivity with views for Leanback
- Create MainActivity/MainTvFragment to reflect the main view
of the app
- AuthActivityTv/AuthFragmentTv: Switch to MainActivity if there
aren't any calling activities (Like AceTvInputSetupActivity)
- Create SettingsObjectAdapter which will reflect every settings
action.
- Create a CardViewPresenter which will represent each element
from row in Leanback.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,8 @@
     <string name="username_text">Username</string>
     <string name="password_text">Password</string>
     <string name="tv_input_label">A.C.E. IPTV</string>
+    <string name="settings_text">Settings</string>
+    <string name="stream_type">Stream type</string>
+    <string name="stream_type_short_description">MPEG-TS/HLS</string>
     <string name="wrong_credentials">Your credentials are not valid</string>
 </resources>
