--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,14 +2,19 @@
     <string name="app_name">Ace IPTV</string>
     <string name="authentication_not_possible">Can\'t authenticate</string>
     <string name="connect_text">Connect</string>
+    <string name="channel_update">Updating channels&#8230;</string>
     <string name="connection_successful_text">Connection successful!</string>
+    <string name="current_stream_type">Current type: %1$s</string>
+    <string name="hls_text">HLS</string>
     <string name="invalid_channel">Channel invalid, please contact A.C.E</string>
     <string name="internet_not_available">Please verify your internet connection</string>
-    <string name="username_text">Username</string>
+    <string name="mpeg_ts_text">MPEG-TS</string>
     <string name="password_text">Password</string>
     <string name="tv_input_label">A.C.E. IPTV</string>
     <string name="settings_text">Settings</string>
     <string name="stream_type">Stream type</string>
     <string name="stream_type_short_description">MPEG-TS/HLS</string>
+    <string name="stream_type_description">Sets the current stream output for a given IPTV channel</string>
+    <string name="username_text">Username</string>
     <string name="wrong_credentials">Your credentials are not valid</string>
 </resources>
