--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,18 @@
 <resources>
     <string name="app_name">Ace IPTV</string>
+    <string name="activated_text">Activated</string>
     <string name="authentication_not_possible">Can\'t authenticate</string>
     <string name="connect_text">Connect</string>
+    <string name="channel_logo">Display channel logo</string>
+    <string name="channel_logo_short">Channel logo</string>
+    <string name="channel_logo_description">Displays the channel\'s logo on the EPG interactive guide when using the Live Channels application. (Might take a bit of time for a full sync)</string>
     <string name="channel_update">Updating channels&#8230;</string>
     <string name="connection_successful_text">Connection successful!</string>
-    <string name="current_stream_type">Current type: %1$s</string>
+    <string name="current_status_text">Current status: %1$s</string>
+    <string name="deactivated_text">Deactivated</string>
     <string name="force_epg_sync">Force EPG sync</string>
     <string name="force_epg_sync_short">Force sync</string>
-    <string name="force_epg_sync_description">Syncs the EPG guide for one hour</string>
+    <string name="force_epg_sync_description">Syncs the EPG guide for one hour.</string>
     <string name="hls_text">HLS</string>
     <string name="invalid_channel">Channel invalid, please contact A.C.E</string>
     <string name="internet_not_available">Please verify your internet connection</string>
@@ -18,7 +23,7 @@
     <string name="settings_text">Settings</string>
     <string name="stream_type">Stream type</string>
     <string name="stream_type_short_description">MPEG-TS/HLS</string>
-    <string name="stream_type_description">Sets the current stream output for a given IPTV channel</string>
+    <string name="stream_type_description">Sets the current stream output for a given IPTV channel.</string>
     <string name="username_text">Username</string>
     <string name="wrong_credentials">Your credentials are not valid</string>
     <string name="yes_text">Yes</string>
