Settings: Some UI changes on the guided fragments side
- Replace some strings name for consistency
- Add a question to some titles
- Remove the logo since it is small and doesn't serve much of a
purpose in the option itself.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,15 +3,15 @@
     <string name="activated_text">Activated</string>
     <string name="authentication_not_possible">Can\'t authenticate</string>
     <string name="connect_text">Connect</string>
-    <string name="channel_logo">Display channel logo</string>
-    <string name="channel_logo_short">Channel logo</string>
+    <string name="channel_logo_title">Display channel logo?</string>
+    <string name="channel_logo_title_short">Channel logo</string>
     <string name="channel_logo_description">Displays the channel\'s logo on the EPG interactive guide when using the Live Channels application. (Might take a bit of time for a full sync)</string>
     <string name="channel_update">Updating channels&#8230;</string>
     <string name="connection_successful_text">Connection successful!</string>
     <string name="current_status_text">Current status: %1$s</string>
     <string name="deactivated_text">Deactivated</string>
-    <string name="force_epg_sync">Force EPG sync</string>
-    <string name="force_epg_sync_short">Force sync</string>
+    <string name="force_epg_sync_title">Force EPG sync?</string>
+    <string name="force_epg_sync_title_short">Force sync</string>
     <string name="force_epg_sync_description">Syncs the EPG guide for one hour.</string>
     <string name="hls_text">HLS</string>
     <string name="invalid_channel">Channel invalid, please contact A.C.E</string>
