Revamp Sign-in UI
- Use GuidedStepFragments in order to show a more consistent
UX when using the Leanback Support Library. They are
ordered between the Welcome, Email, Password, Loading and
Connected phases.
- Remove the old Auth Fragments since it wasn't all that pretty
for TV's.
- Replace the responsibility of AuthActivityTv to either know
whether executing itself or finishing itself. It should be up to
the demanding activities to call it if needed.
- AndroidManifest.xml: Change the default launching activity
to MainActivity.
- MainActivity: Determine whether the app is in TV UI mode
or not to show the correct fragments.
- AuthPresenterImpl: Set the default stream type to HLS.
- Create a Utilities class in order to simply code reuse
throughout classes.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,12 @@
     <string name="app_name">Ace IPTV</string>
     <string name="activated_text">Activated</string>
     <string name="authentication_not_possible">Can\'t authenticate</string>
+    <string name="authentication_required">In order to use A.C.E. IPTV services, you must sign-in.</string>
     <string name="connect_text">Connect</string>
+    <string name="connection_description_account_change">Enjoy using your new account</string>
+    <string name="connected_description_live_channels">The channels will now sync into the Live Channels. Happy watching!</string>
+    <string name="connected_description_standalone">You can now download the Live Channels app to benefit from live TV or you can watch VOD\'s/Catchup here.</string>
+    <string name="change_user_title">Change user</string>
     <string name="channel_logo_title">Display channel logo?</string>
     <string name="channel_logo_title_short">Channel logo</string>
     <string name="channel_logo_description">Displays the channel\'s logo on the EPG interactive guide when using the Live Channels application. (Might take a bit of time for a full sync)</string>
@@ -10,21 +15,31 @@
     <string name="connection_successful_text">Connection successful!</string>
     <string name="current_status_text">Current status: %1$s</string>
     <string name="deactivated_text">Deactivated</string>
+    <string name="email_not_valid">Please enter a valid email address</string>
+    <string name="email_text">Email address</string>
+    <string name="enter_email_title">Please enter your A.C.E. IPTV account email address</string>
+    <string name="enter_password_title">Please enter your password</string>
     <string name="force_epg_sync_title">Force EPG sync?</string>
     <string name="force_epg_sync_title_short">Force sync</string>
     <string name="force_epg_sync_description">Syncs the EPG guide for one hour.</string>
     <string name="hls_text">HLS</string>
     <string name="invalid_channel">Channel invalid, please contact A.C.E</string>
     <string name="internet_not_available">Please verify your internet connection</string>
+    <string name="lets_go_text">Let\'s go</string>
     <string name="mpeg_ts_text">MPEG-TS</string>
+    <string name="password_empty">Please enter a password.</string>
     <string name="no_text">No</string>
+    <string name="not_yet_text">Not yet</string>
     <string name="password_text">Password</string>
     <string name="tv_input_label">A.C.E. IPTV</string>
     <string name="settings_text">Settings</string>
+    <string name="signing_text">Signing in&#8230;</string>
     <string name="stream_type">Stream type</string>
     <string name="stream_type_short_description">MPEG-TS/HLS</string>
     <string name="stream_type_description">Sets the current stream output for a given IPTV channel.</string>
     <string name="username_text">Username</string>
+    <string name="welcome_text">Welcome</string>
+    <string name="wont_be_long_text">It won\'t be too long&#8230;</string>
     <string name="wrong_credentials">Your credentials are not valid</string>
     <string name="yes_text">Yes</string>
 </resources>
