AceTvInputService: Adjust some errors
It might happen that some errors occur during a streaming. Some
of them have been recognized like BehindLiveWindowException.

Handle two more error cause which might be related to error
codes 403 (for multi-connections) and 502 (for bad gateways)
as well as errors for a timeout.

Add Toasts to notify the user about the situation.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="tv_input_label">A.C.E. IPTV</string>
     <string name="settings_text">Settings</string>
     <string name="signing_text">Signing in&#8230;</string>
+    <string name="stream_failure_retry">Stream failure, retrying&#8230;</string>
     <string name="stream_type">Stream type</string>
     <string name="stream_type_short_description">MPEG-TS/HLS</string>
     <string name="stream_type_description">Sets the current stream output for a given IPTV channel.</string>
