EpgForceSyncGuidedFragment: Extend the force sync duration
One hour is a bit silly if we want to force an EPG sync, let's go for
48 hours in order to have enough programming content.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="enter_password_title">Please enter your password</string>
     <string name="force_epg_sync_title">Force EPG sync?</string>
     <string name="force_epg_sync_title_short">Force sync</string>
-    <string name="force_epg_sync_description">Syncs the EPG guide for one hour.</string>
+    <string name="force_epg_sync_description">Syncs the EPG guide for 48 hours.</string>
     <string name="hls_text">HLS</string>
     <string name="invalid_channel">Channel invalid, please contact A.C.E</string>
     <string name="internet_not_available">Please verify your internet connection</string>
