--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,10 @@
     <string name="authentication_not_possible">Can\'t authenticate</string>
     <string name="authentication_required">In order to use A.C.E. IPTV services, you must sign-in.</string>
     <string name="connect_text">Connect</string>
-    <string name="connection_description_account_change">Enjoy using your new account</string>
     <string name="connected_description_live_channels">The channels will now sync into the Live Channels. Happy watching!</string>
     <string name="connected_description_standalone">You can now download the Live Channels app to benefit from live TV or you can watch VOD\'s/Catchup here.</string>
+    <string name="connection_description_account_change">Enjoy using your new account</string>
+    <string name="connection_timeout_toast">Something went wrong, please try again</string>
     <string name="change_user_title">Change user</string>
     <string name="channel_logo_title">Display channel logo?</string>
     <string name="channel_logo_title_short">Channel logo</string>
@@ -41,6 +42,6 @@
     <string name="username_text">Username</string>
     <string name="welcome_text">Welcome</string>
     <string name="wont_be_long_text">It won\'t be too long&#8230;</string>
-    <string name="wrong_credentials">Your credentials are not valid</string>
+    <string name="wrong_credentials_toast">Your credentials are not valid</string>
     <string name="yes_text">Yes</string>
 </resources>
