--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="activated_text">Activated</string>
     <string name="authentication_not_possible">Can\'t authenticate</string>
     <string name="authentication_required">In order to use A.C.E. IPTV services, you must sign-in.</string>
+    <string name="catchup_title">TV Catchup</string>
     <string name="connect_text">Connect</string>
     <string name="connected_description_live_channels">The channels will now sync into the Live Channels. Happy watching!</string>
     <string name="connected_description_standalone">You can now download the Live Channels app to benefit from live TV or you can watch VOD\'s/Catchup here.</string>
