Add support for TV series
- Change CatchupTvFragment into VodSectionTvFragment which
will act as a base fragment for loading all Vod stuff.
- Extend CatchupTvFragment and create a new class
SeriesTvFragment based on VodSectionTvFragment.
- AvContentUtil: Change logic from getAcContentsAsString() in
order adapt for M3U playlists having newlines.
- MainTvFragment: Add the Tv series section.
- CardViewPresenter: Only add a logo if the link from an
AvContent is not empty.
- Add required strings/api endpoints.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="ok_text">Ok</string>
     <string name="password_text">Password</string>
     <string name="tv_input_label">A.C.E. IPTV</string>
+    <string name="series_title">TV Series</string>
     <string name="settings_text">Settings</string>
     <string name="signing_text">Signing in&#8230;</string>
     <string name="stream_failure_retry">Stream failure, retrying&#8230;</string>
