--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,17 +5,18 @@
     <string name="authentication_not_possible">Can\'t authenticate</string>
     <string name="authentication_required">In order to use A.C.E. IPTV services, you must sign-in.</string>
     <string name="catchup_title">TV Catchup</string>
-    <string name="connect_text">Connect</string>
-    <string name="connected_description_live_channels">The channels will now sync into the Live Channels. Happy watching!</string>
-    <string name="connected_description_standalone">You can now download the Live Channels app to benefit from live TV or you can watch VOD\'s/Catchup here.</string>
-    <string name="connection_description_account_change">Enjoy using your new account</string>
-    <string name="connection_timeout_toast">Something went wrong, please try again</string>
     <string name="change_user_title">Change user</string>
     <string name="channel_logo_title">Display channel logo?</string>
     <string name="channel_logo_title_short">Channel logo</string>
     <string name="channel_logo_description">Displays the channel\'s logo on the EPG interactive guide when using the Live Channels application. (Might take a bit of time for a full sync)</string>
     <string name="channel_update">Updating channels&#8230;</string>
+    <string name="connect_text">Connect</string>
+    <string name="connected_description_live_channels">The channels will now sync into the Live Channels. Happy watching!</string>
+    <string name="connected_description_standalone">You can now download the Live Channels app to benefit from live TV or you can watch VOD\'s/Catchup here.</string>
+    <string name="connection_description_account_change">Enjoy using your new account</string>
+    <string name="connection_timeout_toast">Something went wrong, please try again</string>
     <string name="connection_successful_text">Connection successful!</string>
+    <string name="content_not_available">Content not available.</string>
     <string name="current_status_text">Current status: %1$s</string>
     <string name="deactivated_text">Deactivated</string>
     <string name="debug_log_title">Create debug log?</string>
