--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,9 @@
     <string name="force_epg_sync_title">Force EPG sync?</string>
     <string name="force_epg_sync_title_short">Force sync</string>
     <string name="force_epg_sync_description">Syncs the EPG guide for 48 hours.</string>
+    <string name="force_video_fit_title">Force video stretching?</string>
+    <string name="force_video_fit_title_short">Force strech</string>
+    <string name="force_video_fit_description">Forces a video to fit into full screen</string>
     <string name="hls_text">HLS</string>
     <string name="internet_not_available">Please verify your internet connection</string>
     <string name="lets_go_text">Let\'s go</string>
