--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,7 @@
     <string name="ok_text">Ok</string>
     <string name="password_text">Password</string>
     <string name="tv_input_label">Ace TV</string>
+    <string name="restart_live_channels">Please restart your Live TV app for the changes to be applied.</string>
     <string name="series_title">TV Series</string>
     <string name="settings_text">Settings</string>
     <string name="signing_text">Signing in&#8230;</string>
