--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="channel_logo_title">Display channel logo?</string>
     <string name="channel_logo_title_short">Channel logo</string>
     <string name="channel_logo_description">Displays the channel\'s logo on the EPG interactive guide when using the Live Channels application. (Might take a bit of time for a full sync)</string>
+    <string name="channel_region_title">Channel regions</string>
+    <string name="channel_region_description">Enables a region to be watched with Live TV.\n\nNote: You might have to reselect the related channels in the Live TV app if a region is being re-added.</string>
     <string name="channel_stream_failure">Stream failure. Please try again later or contact Ace TV</string>
     <string name="connect_text">Connect</string>
     <string name="channel_update">Updating channels&#8230;</string>
@@ -51,6 +53,9 @@
     <string name="password_text">Password</string>
     <string name="tv_input_label">Ace TV</string>
     <string name="restart_live_channels">Please restart your Live TV app for the changes to be applied.</string>
+    <string name="region_international">International</string>
+    <string name="region_na">North America (USA/CA)</string>
+    <string name="region_uk">United Kingdom (UK)</string>
     <string name="series_title">TV Series</string>
     <string name="settings_text">Settings</string>
     <string name="signing_text">Signing in&#8230;</string>
