DebugLogGuidedFragment: Remove some debug code
The debug code was there at first in an attempt to fix Sony Bravia
TV's that couldn't get their Live Channels working.

Since they need a system-based app to add the channels, it is
no longer necessary to have this code.

Also fix some text for the toasts.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="enter_username_title">Please enter your Ace TV account username</string>
     <string name="error_text">Error</string>
     <string name="file_saved_storage">File saved at %1$s</string>
+    <string name="file_saving_error">An problem occurred while saving the file</string>
     <string name="force_epg_sync_title">Force EPG sync?</string>
     <string name="force_epg_sync_title_short">Force sync</string>
     <string name="force_epg_sync_description">Syncs the EPG guide for 48 hours.</string>
