demoapp: Add possibility to add a custom Xtream Codes URL
- Implement a custom TV Input Service with it's corresponding
Activity/Fragment (To be able to communicate with the system.
- Create a Activity/Fragment for the user to input a given URL.
- Create a DemoEpgService which will manage the insertion and update
of the EPG for the app.
ChannelLogoGuidedFragment: Update the channels logo
accordingly.

--- a/demoapp/src/main/res/values/strings.xml
+++ b/demoapp/src/main/res/values/strings.xml
@@ -9,7 +9,12 @@
     <string name="current_status_text">Current status: %1$s</string>
     <string name="deactivated_text">Deactivated</string>
     <string name="device_not_android_tv">Your device is not running Android TV!</string>
+    <string name="enter_playlist_url">Please enter your playlist URL</string>
     <string name="no_text">No</string>
+    <string name="playlist_url">Playlist URL</string>
+    <string name="playlist_url_invalid">URL invalid</string>
     <string name="settings_text">Settings</string>
+    <string name="sync_channels">Syncing channels&#8230;</string>
+    <string name="tv_input_label">aidl Demo</string>
     <string name="yes_text">Yes</string>
 </resources>
