Change aipl/axipl to xipl
It is more representative to change everything to xipl since the library only
concerned XtreamCodes providers at the moment.

Also "Android Xtream Codes IPTV Provider Library" was a bit long so only
use "Xtream Codes IPTV Provider Library" as such. It might be changed in
the future if there is an issue concerning this.

--- a/demoapp/src/main/res/values/strings.xml
+++ b/demoapp/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
-    <string name="app_name">IPTV Provider Library Demo</string>
+    <string name="app_name">xipl Demo</string>
     <string name="about_text">About</string>
-    <string name="about_title">Android IPTV Provider Library (aidl) Demo</string>
+    <string name="about_title">Xtream Codes IPTV Provider (xipl) Demo</string>
     <string name="about_description">Demo application</string>
     <string name="activated_text">Activated</string>
     <string name="channel_logo_title">Channel logo</string>
