--- a/app/Changelog.txt
+++ b/app/Changelog.txt
@@ -1,3 +1,8 @@
+V1.1.3 (15/08/17)
+- Internal application structure changes (Cache and Live Channels will be reset)
+- VOD: Add TV Catchup seeking
+- Settings: Add clear cache option
+
 V1.1.2 (10/08/17)
 - Fixed the EPG not being updated periodically
 - Improvements to the internal player
