AppUpdateDownloadGuidedFragment: Add some text
It's kinda empty and weird without text announcing that the update is
download so let's add it.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="debug_log_title">Create debug log?</string>
     <string name="debug_log_title_short">Debug log</string>
     <string name="debug_log_description">Creates a text file usable for debugging purposes to your internal storage.</string>
+    <string name="download_text">Downloading&#8230;</string>
     <string name="download_update_text">Download update</string>
     <string name="enter_password_title">Please enter your password</string>
     <string name="enter_username_title">Please enter your Ace TV account username</string>
