--- a/app/Changelog.txt
+++ b/app/Changelog.txt
@@ -1,3 +1,7 @@
+V1.1.4 (20/08/17)
+- VOD: Add content searching
+- You already know... More bugfixes...
+
 V1.1.3 (15/08/17)
 - Internal application structure changes (Cache and Live Channels will be reset)
 - VOD: Add TV Catchup seeking
