--- a/app/Changelog.txt
+++ b/app/Changelog.txt
@@ -1,3 +1,9 @@
+V1.1.5 (24/08/17)
+- VOD: Possibility to use an external player for playback
+- VOD: Fixed voice input for searching
+- VOD: Fixed long playlists parsing timeout
+- Catchup: Added EPG offset modification
+
 V1.1.4 (20/08/17)
 - VOD: Add content searching
 - You already know... More bugfixes...
