--- a/app/Changelog.txt
+++ b/app/Changelog.txt
@@ -1,3 +1,6 @@
+V1.1.6 (12/03/18)
+- Change cloud provider for updates
+
 V1.1.5 (24/08/17)
 - VOD: Possibility to use an external player for playback
 - VOD: Fixed voice input for searching
