--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,8 @@
     <string name="download_text">Downloading&#8230;</string>
     <string name="download_update_text">Download update</string>
     <string name="enter_password_title">Please enter your password</string>
+    <string name="enter_provider_url_title">Please enter your provider URL</string>
+    <string name="enter_provider_url_description">Example: http://test.com:8080/get.php?username=X&#38;;password=X&#38;;output=ts&#38;type=m3u_plus</string>
     <string name="enter_username_title">Please enter your Ace TV account username</string>
     <string name="epg_offset_title">TV Catchup EPG offset</string>
     <string name="epg_offset_title_short">EPG offset</string>
@@ -69,6 +71,7 @@
     <string name="offset_text">Offset</string>
     <string name="ok_text">Ok</string>
     <string name="password_text">Password</string>
+    <string name="provider_url_text">Provider URL</string>
     <string name="tv_input_label">Ace TV</string>
     <string name="restart_live_channels">Please restart your Live TV app for the changes to be applied.</string>
     <string name="region_international">International</string>
